fix: clear commented code